--- a/index.html
+++ b/index.html
@@ -15,38 +15,38 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="title"
-      content="Parthiv Majumdar - Profil Pengembang Front-End Web"
+      content="Parthiv Majumdar - Portfolio"
     />
     <meta
       name="description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Welcome to my webiste! Visit my projects and leave a comment."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://eki.my.id/" />
+    <meta property="og:url" content="https://portfolio-parthiv.vercel.app/" />
     <meta
       property="og:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+      content="Parthiv Majumdar - Portfolio"
     />
     <meta
       property="og:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Welcome to my webiste! Visit my projects and leave a comment"
     />
-    <meta property="og:image" content="https://eki.my.id/Meta.png" />
+    <meta property="og:image" content="https://portfolio-parthiv.vercel.app/Meta.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://eki.my.id/" />
+    <meta property="twitter:url" content="https://portfolio-parthiv.vercel.app/" />
     <meta
       property="twitter:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+      content="Parthiv Majumdar - Portfolio"
     />
     <meta
       property="twitter:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Welcome to my webiste! Visit my projects and leave a comment"
     />
-    <meta property="twitter:image" content="https://eki.my.id/Meta.png" />
+    <meta property="twitter:image" content="https://portfolio-parthiv.vercel.app/Meta.png" />
     <meta name="theme-color" content="rgb(3,0,20)" />
     <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
